<resources>
    <string name="app_name">WeatherApp</string>
    <string name="miles_per_hour">mph</string>
    <string name="km_per_hour">km/h</string>
    <string name="meters_per_second">m/s</string>

    <string name="northerly">N</string>
    <string name="north_westerly">NW</string>
    <string name="westerly">W</string>
    <string name="south_westerly">SW</string>
    <string name="southerly">S</string>
    <string name="south_easterly">SE</string>
    <string name="easterly">E</string>
    <string name="north_easterly">NE</string>
    <string name="mmhg">mmHg</string>
    <string name="hpa">hpa</string>
    <string name="mbar">mbar</string>

    <string name="feels_like">Feels like:</string>
    <string name="visibility">Visibility:</string>
    <string name="pressure">Pressure:</string>
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="km" >km</string>
    <string name="miles" >mi</string>
    <string name="settings">Settings</string>
    <string name="quit">Logout</string>
    <string name="enable_location_settings">Please, enable location settings</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_wind_speed">Wind speed</string>
    <string name="title_visibility">Visibility</string>
    <string name="title_pressure">Pressure</string>
    <string name="ok">Ok</string>
    <string name="fahrenheit" translatable="false">°F</string>
    <string name="celsius" translatable="false">°C</string>
    <string name="kelvin" translatable="false">°K</string>
    <string name="meters" >m</string>
    <string name="favorites">Favorites</string>
    <string name="search_hint">City or area</string>
    <string name="empty_result">Nothing found matching your query</string>
    <string name="enterAddress">Enter address name</string>
    <string name="search">Search</string>
</resources>