<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:id="@+id/rl_temp_unit"
        android:padding="@dimen/settingCardPadding"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_temp_unit_title"
            app:srcCompat="@drawable/ic_temp"
            android:layout_centerVertical="true"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:id="@+id/tv_temp_unit_title"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_temp_unit_title"
            android:text="@string/title_temperature"
            android:textColor="#000"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#80000000"
            tools:text="Celsius"
            android:textSize="12sp"
            android:layout_alignStart="@id/tv_temp_unit_title"
            android:id="@+id/tv_current_temp_unit"
            android:layout_below="@+id/tv_temp_unit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <RelativeLayout
        android:id="@+id/rl_wind_speed_unit"
        android:padding="@dimen/settingCardPadding"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_wind_speed_unit_title"
            app:srcCompat="@drawable/ic_wind"
            android:layout_centerVertical="true"
            android:tint="#000"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:id="@+id/tv_wind_speed_unit_title"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_wind_speed_unit_title"
            android:text="@string/title_wind_speed"
            android:textColor="#000"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#80000000"
            tools:text="Km/h"
            android:textSize="12sp"
            android:layout_alignStart="@id/tv_wind_speed_unit_title"
            android:id="@+id/tv_current_wind_speed_unit"
            android:layout_below="@+id/tv_wind_speed_unit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <RelativeLayout
        android:id="@+id/rl_visibility_unit"
        android:padding="@dimen/settingCardPadding"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_visibility_unit_title"
            app:srcCompat="@drawable/ic_visibility"
            android:tint="#000"
            android:layout_centerVertical="true"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:id="@+id/tv_visibility_unit_title"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_visibility_unit_title"
            android:text="@string/title_visibility"
            android:textColor="#000"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#80000000"
            tools:text="Km"
            android:textSize="12sp"
            android:layout_alignStart="@id/tv_visibility_unit_title"
            android:id="@+id/tv_current_visibility_unit"
            android:layout_below="@+id/tv_visibility_unit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <RelativeLayout
        android:id="@+id/rl_pressure_unit"
        android:padding="@dimen/settingCardPadding"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_pressure_unit_title"
            app:srcCompat="@drawable/ic_pressure"
            android:layout_centerVertical="true"
            android:tint="#000"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:id="@+id/tv_pressure_unit_title"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_pressure_unit_title"
            android:text="@string/title_pressure"
            android:textColor="#000"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#80000000"
            tools:text="hPa"
            android:textSize="12sp"
            android:layout_alignStart="@id/tv_pressure_unit_title"
            android:id="@+id/tv_current_pressure_unit"
            android:layout_below="@+id/tv_pressure_unit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>